# bmstu-oop

./: Readme.md
lab1/: Makefile  Readme.md  drafts.ipynb
lab1/inc/: drawer.hpp  io.hpp  model.hpp  project.hpp  request.hpp  rotate.hpp  scale.hpp  translate.hpp  wrapper.hpp
lab1/models/: cerf_los.txt  cpp_text.txt  cube_old.txt  data_bitten.txt  dog.txt  monkey.txt
lab1/src/: drawer.cpp  io.cpp  main.cpp  model.cpp  project.cpp  rotate.cpp  scale.cpp  translate.cpp
lab_01/: Makefile  Readme.md  convert_from_obj.py  drafts.ipynb
lab_01/inc/: drawer.hpp  model.hpp  scale.hpp
lab_01/models/: cerf_los.txt
lab_01/src/: main.cpp  scale.cpp
lab_02/: CMakeLists.txt  README.md
lab_02/inc/: base.hpp  const_iterator_list.h  const_iterator_list.hpp  iterator_list.h  iterator_list.hpp  list.h  list.hpp  list_exceptions.h  list_node.h  list_node.hpp
lab_02/src/: base.cpp  main.cpp
lab_03/: CMakeLists.txt  Doxyfile  README.md  main.cpp  uml.drawio
lab_03/data/: beaten.txt  beaver.txt  cerf_los.txt
lab_03/lib/: CMakeLists.txt  array.h  lib.cpp  scene.cpp  scene.h
lab_03/lib/commands/: a_scene_command.cpp  a_scene_command.h  add_camera_command.cpp  add_camera_command.h  file_import_command.cpp  file_import_command.h  get_objects_command.cpp  get_objects_command.h  i_command.h  import_command.cpp  import_command.h  remove_command.cpp  remove_command.h  render_command.cpp  render_command.h  rotate_command.cpp  rotate_command.h  scale_command.cpp  scale_command.h  set_camera_command.cpp  set_camera_command.h  transform_command.cpp  transform_command.h  translate_command.cpp  translate_command.h
lab_03/lib/drawer/: i_drawer.h
lab_03/lib/exception/: exception-base.hpp  exceptions.hpp
lab_03/lib/import/: i_importer.h  i_model_builder.cpp  i_model_builder.h  model_builder.cpp  model_builder.h  model_director.cpp  model_director.h  my_format_importer.cpp  my_format_importer.h
lab_03/lib/managers/: i_manager.h  import_manager.cpp  import_manager.h  render_manager.cpp  render_manager.h  scene_manager.cpp  scene_manager.h  transform_manager.cpp  transform_manager.h
lab_03/lib/managers/creators/: i_manager_creator.h  import_manager_creator.cpp  import_manager_creator.h  render_manager_creator.cpp  render_manager_creator.h  scene_manager_creator.cpp  scene_manager_creator.h  transform_manager_creator.cpp  transform_manager_creator.h
lab_03/lib/objects/: a_invisible_object.cpp  a_invisible_object.h  a_visible_object.cpp  a_visible_object.h  camera.cpp  camera.h  composite_object.cpp  composite_object.h  empty_objects_pool.h  i_object.h  i_objects_pool.h  model.cpp  model.h
lab_03/lib/objects/camera_impl/: camera_impl.cpp  camera_impl.h  i_camera_impl.h
lab_03/lib/objects/model/: edge.cpp  edge.h  model_data.cpp  model_data.h  point.cpp  point.h
lab_03/lib/objects/visitors/: a_scene_visitor.cpp  a_scene_visitor.h  a_visitor.cpp  a_visitor.h  render_visitor.cpp  render_visitor.h  transform_visitor.cpp  transform_visitor.h
lab_03/lib/utils/: matrix_utils.h  transformation.cpp  transformation.h  vector.cpp  vector.h
lab_03/lib/utils/coord/: coord.cpp  coord.h  coord_2d.cpp  coord_2d.h  coord_creator.cpp  coord_creator.h  coord_solution.cpp  coord_solution.h  i_coord.h  i_coord_2d.h  i_coord_creator.h
lab_04/: CMakeLists.txt  README.md  doc.drawio  main.cpp
lab_04/lib/: CMakeLists.txt  lib.cpp
lab_04/lib/cabin/: cabin.cpp  cabin.h
lab_04/lib/controller/: controller.cpp  controller.h
lab_04/lib/doors/: doors.cpp  doors.h
lab_04/lib/lift/: lift.cpp  lift.h
lab_04/lib/panel/: floor_button.cpp  floor_button.h  panel.cpp  panel.h
lab_04/lib/publisher_subscriber/: event.cpp  event.h  i_publisher.h  i_subscriber.cpp  i_subscriber.h  publisher.cpp  publisher.h  subscriber.cpp  subscriber.h
lab_04/lib/timer/: timer.cpp  timer.h
lab_05/: Lab_05.drawio
