cmake_minimum_required(VERSION 3.16)
project(lab03)

set(CMAKE_CXX_STANDARD 17)

set(FILES
        lib.cpp
        utils/coord/coord.cpp
        utils/vector.cpp
        utils/coord/coord_2d.cpp
        objects/model/point.cpp
        objects/model/point.h
        objects/i_object.h
        objects/a_visible_object.cpp
        objects/a_visible_object.h
        objects/a_invisible_object.cpp
        objects/a_invisible_object.h
        objects/composite_object.cpp
        objects/composite_object.h
        array.h
        objects/camera_impl/i_camera_impl.h
        objects/camera_impl/camera_impl.cpp
        objects/camera_impl/camera_impl.h
        objects/camera.cpp
        objects/camera.h
        utils/transformation.cpp
        utils/transformation.h
        objects/visitors/a_visitor.h
        utils/matrix_utils.h
        scene.cpp
        scene.h
        managers/i_manager.h
        managers/transform_manager.cpp
        managers/transform_manager.h
        managers/scene_manager.cpp
        managers/scene_manager.h
        managers/creators/scene_manager_creator.h
        objects/model/edge.cpp
        objects/model/edge.h
        objects/model/model_data.cpp
        objects/model/model_data.h
        managers/creators/scene_manager_creator.cpp
        managers/creators/transform_manager_creator.cpp
        managers/render_manager.cpp
        managers/render_manager.h
        drawer/i_drawer.h
        objects/visitors/a_visitor.h
        objects/visitors/render_visitor.cpp
        objects/visitors/render_visitor.h
        objects/model.cpp
        objects/model.h
        objects/visitors/a_scene_visitor.cpp
        objects/visitors/a_scene_visitor.h
        objects/visitors/transform_visitor.cpp
        objects/visitors/transform_visitor.h
        objects/visitors/a_visitor.cpp
        managers/import_manager.cpp
        managers/import_manager.h
        import/i_importer.h
        import/my_format_importer.cpp
        import/my_format_importer.h
        import/model_builder.cpp
        import/model_builder.h
        import/i_model_builder.cpp
        import/i_model_builder.h
        import/model_director.cpp
        import/model_director.h
        managers/creators/import_manager_creator.cpp
        managers/creators/import_manager_creator.h
        commands/i_command.h
        commands/a_scene_command.cpp
        commands/a_scene_command.h
        commands/render_command.cpp
        commands/render_command.h
        managers/creators/render_manager_creator.cpp
        managers/creators/render_manager_creator.h
        commands/import_command.cpp commands/import_command.h
        commands/file_import_command.cpp
        commands/file_import_command.h
        commands/file_import_command.cpp
        commands/file_import_command.h
        commands/get_objects_command.cpp
        commands/get_objects_command.h
        commands/transform_command.cpp
        commands/transform_command.h
        commands/translate_command.cpp
        commands/translate_command.h
        commands/rotate_command.cpp
        commands/rotate_command.h
        commands/scale_command.cpp
        commands/scale_command.h
        commands/set_camera_command.cpp
        commands/set_camera_command.h
        commands/add_camera_command.cpp
        commands/add_camera_command.h
        commands/remove_command.cpp
        commands/remove_command.h
        scene.cpp
        scene.h
        utils/coord/i_coord.h utils/coord/i_coord_2d.h utils/coord/i_coord_creator.h utils/coord/coord_creator.cpp utils/coord/coord_creator.h utils/coord/coord_solution.cpp utils/coord/coord_solution.h objects/i_objects_pool.h)

add_library(graphics_lib ${FILES})
